--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,19 @@
 }
 
 body {
-    background-color: #121212;
-    color: white;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    /* background-color: #121212; */
+    /* color: white; */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f1f3f4;
 }
 
 .card {
-    background-color: #181818;
+    /* background-color: #181818;   */ 
+    background-color: white;
+}
+.card:hover{
+    cursor: pointer;
+    scale: 1.05;
+    box-shadow: 0px 2px 10px -6px black;
+    transition: all 200ms ease-in-out;
 }
